fix: change parameter name

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <code class="specialization">Applied Mathematics and Cybernetics</code>
             </li>
             <li class="edu">CS50 Harvard Online Course</li>
-            <li ckass="edu">Introduction to Machine Learning, Coursera</li> 
+            <li class="edu">Introduction to Machine Learning, Coursera</li> 
           </ul>
         </section>
         <section>
