feat: add picture

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   <body>
     <div class="container">
       <header>
-        <h1>Akulinichev Maxim</h1>
-        <p>Russia, Moscow</p>
+        <div class="header">
+          <img src="img/snap.jpg" alt="photo" width="144" height="144">
+          <div class="header-text">
+            <h1>Akulinichev Maxim</h1>
+            <p>Russia, Moscow</p>
+          </div>
+        </div>
       </header>
       <main>
         <section>
